src/objects/SDC__AccountCredential__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>SDC__DQIKeyStatus__c</fullName>
        <label>Key Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__DQIUserName__c</fullName>
        <label>User Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SDC__License_Type__c</fullName>
        <label>License Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDC__Product_Name__c</fullName>
        <label>Product Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <label>Product Key</label>
    <listViews>
        <fullName>SDC__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Object Label Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>